--- a/package.json
+++ b/package.json
@@ -4,9 +4,18 @@
   "engines": {
     "node": ">=12.0.0"
   },
-  "scripts": {
-    "start": "yarn build && yarn workspace example-app start"
-  },
+  "scripts":   "scripts": {
+    "start": "yarn build && yarn workspace example-app start",
+    "bundle": "yarn build && yarn workspace example-app bundle",
+    "build": "lerna run build",
+    "test": "yarn build && lerna run test --since origin/master -- --coverage",
+    "lint": "lerna run lint --since origin/master --",
+    "docker-build": "yarn bundle && docker build . -t spotify/backstage",
+    "create-plugin": "backstage-cli create-plugin",
+    "release": "if [ \"$(git symbolic-ref --short HEAD)\" = master ]; then echo \"don't try to release master\"; exit 1; else lerna version --no-push; fi",
+    "lerna": "lerna",
+    "storybook": "yarn workspace storybook start"
+  },,
   "workspaces": {
     "packages": [
       "packages/*",
