--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "engines": {
     "node": ">=12.0.0"
   },
-  "scripts":   "scripts": {
+  "scripts": {
     "start": "yarn build && yarn workspace example-app start",
     "bundle": "yarn build && yarn workspace example-app bundle",
     "build": "lerna run build",
@@ -15,7 +15,7 @@
     "release": "if [ \"$(git symbolic-ref --short HEAD)\" = master ]; then echo \"don't try to release master\"; exit 1; else lerna version --no-push; fi",
     "lerna": "lerna",
     "storybook": "yarn workspace storybook start"
-  },,
+  },
   "workspaces": {
     "packages": [
       "packages/*",
